force-app/main/default/objects/product2__c/product2__c.object-meta.xml
<CustomObject>
    <label>Product</label>
    <nameField>
        <label>product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>