force-app/main/default/objects/product2__c/fields/AICMA__c.field-meta.xml
<CustomField>
    <fullName>AICMA__c</fullName>
    <label>AICMA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>