force-app/main/default/objects/product2__c/fields/BusinessUnitType__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitType__c</fullName>
    <label>Business Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hero</fullName>
            </value>
            <value>
                <fullName>Firefox</fullName>
            </value>
            <value>
                <fullName>Lectro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>