force-app/main/default/objects/product2__c/fields/Chain_cover__c.field-meta.xml
<CustomField>
    <fullName>Chain_cover__c</fullName>
    <label>Chain cover</label>
    <length>255</length>
    <type>Text</type>
</CustomField>