force-app/main/default/objects/product2__c/fields/Dealer_Price__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Price__c</fullName>
    <label>Dealer Price</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>