force-app/main/default/objects/product2__c/fields/Discount_Group__c.field-meta.xml
<CustomField>
    <fullName>Discount_Group__c</fullName>
    <label>Discount Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GST-0-1</fullName>
            </value>
            <value>
                <fullName>GST-0-2</fullName>
            </value>
            <value>
                <fullName>GST-12-1</fullName>
            </value>
            <value>
                <fullName>GST-12-2</fullName>
            </value>
            <value>
                <fullName>GST-18-1</fullName>
            </value>
            <value>
                <fullName>GST-18-2</fullName>
            </value>
            <value>
                <fullName>GST-28-1</fullName>
            </value>
            <value>
                <fullName>GST-28-2</fullName>
            </value>
            <value>
                <fullName>GST-5-1</fullName>
            </value>
            <value>
                <fullName>GST-5-2</fullName>
            </value>
            <value>
                <fullName>GST-5-3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>