force-app/main/default/objects/product2__c/fields/Focus_model__c.field-meta.xml
<CustomField>
    <fullName>Focus_model__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Focus model</label>
    <type>Checkbox</type>
</CustomField>