force-app/main/default/objects/product2__c/fields/HMC_Discount_Group__c.field-meta.xml
<CustomField>
    <fullName>HMC_Discount_Group__c</fullName>
    <label>HMC Discount Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>