force-app/main/default/objects/product2__c/fields/HMC_Price__c.field-meta.xml
<CustomField>
    <fullName>HMC_Price__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>