force-app/main/default/objects/product2__c/fields/Landing_Price__c.field-meta.xml
<CustomField>
    <fullName>Landing_Price__c</fullName>
    <label>Landing Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>