force-app/main/default/objects/product2__c/fields/Max_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Max_Quantity__c</fullName>
    <label>Max Quantity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>