force-app/main/default/objects/product2__c/fields/MODEL__c.field-meta.xml
<CustomField>
    <fullName>MODEL__c</fullName>
    <label>MODEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>