force-app/main/default/objects/product2__c/fields/Quantity_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Multiplier__c</fullName>
    <label>Quantity Multiplier</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>