force-app/main/default/objects/product2__c/fields/Saddle__c.field-meta.xml
<CustomField>
    <fullName>Saddle__c</fullName>
    <label>Saddle</label>
    <length>200</length>
    <type>Text</type>
</CustomField>