force-app/main/default/objects/product2__c/fields/SalesApp__c.field-meta.xml
<CustomField>
    <fullName>SalesApp__c</fullName>
    <label>SalesApp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>