force-app/main/default/objects/product2__c/fields/Stand__c.field-meta.xml
<CustomField>
    <fullName>Stand__c</fullName>
    <label>Stand</label>
    <length>200</length>
    <type>Text</type>
</CustomField>