force-app/main/default/objects/product2__c/fields/stock_available__c.field-meta.xml
<CustomField>
    <fullName>stock_available__c</fullName>
    <label>stock available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>