force-app/main/default/objects/product2__c/fields/stock_available_indicator__c.field-meta.xml
<CustomField>
    <fullName>stock_available_indicator__c</fullName>
    <formula>IF( AND( stock_available__c &lt;= 10, stock_available__c &gt;=1),
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 20, 20),
IF(AND(stock_available__c &gt; 10 , stock_available__c &lt;= 25),
IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 20, 20),
IF( stock_available__c == 0,
IMAGE(&quot;https://www.colorcombos.com/images/colors/000084.png&quot;,&quot;blue&quot;,20,20),
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 20, 20)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>stock available indicator</label>
    <type>Text</type>
</CustomField>