force-app/main/default/objects/product2__c/fields/Tax_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Tax_Percentage__c</fullName>
    <label>Tax percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>