force-app/main/default/objects/product2__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal Bike</fullName>
            </value>
            <value>
                <fullName>Electric Bike/Bicycle</fullName>
            </value>
            <value>
                <fullName>Octane / Sprint Pro</fullName>
            </value>
            <value>
                <fullName>Hero / Sprint / Others</fullName>
            </value>
            <value>
                <fullName>Kids</fullName>
            </value>
            <value>
                <fullName>Cycle</fullName>
            </value>
            <value>
                <fullName>Spare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>