force-app/main/default/objects/product2__c/fields/Tyre__c.field-meta.xml
<CustomField>
    <fullName>Tyre__c</fullName>
    <label>Tyre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>