force-app/main/default/objects/product2__c/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <label>Warranty</label>
    <length>50</length>
    <type>Text</type>
</CustomField>