force-app/main/default/objects/product2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HMC_Dealer_Price__c</columns>
    <columns>Max_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>