force-app/main/default/objects/product2__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>ProductCode__c</columns>
    <columns>IsActive__c</columns>
    <columns>BRAND__c</columns>
    <columns>Type__c</columns>
    <columns>HMC_Dealer_Price__c</columns>
    <columns>HMC_MODEL__c</columns>
    <columns>HMC_AICMA__c</columns>
    <columns>BusinessUnitType__c</columns>
    <columns>Carrier__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>